<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_converter_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="at.maymay.convertme.application.core.Converter">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_conversion_collection"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.constraint.ConstraintLayout>

    <com.github.fafaldo.fabtoolbar.widget.FABToolbarLayout
        android:id="@+id/layout_fabtoolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:containerId="@+id/fabtoolbar_container"
        app:fabId="@+id/btn_fabtoolbar"
        app:fabToolbarId="@+id/fabtoolbar_toolbar"
        app:fadeInFraction="0.2"
        app:hideDuration="200"
        app:horizontalMargin="30dp"
        app:showDuration="600"
        app:verticalMargin="30dp">

        <RelativeLayout
            android:id="@+id/fabtoolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_fabtoolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_input_add"
                android:tint="@android:color/background_dark"
                app:backgroundTint="@android:color/holo_green_dark"
                app:fabSize="normal" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/fabtoolbar_toolbar"
            style="?attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_length"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_category_length" />

            <ImageButton
                android:id="@+id/btn_weight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_category_weight" />

            <ImageButton
                android:id="@+id/btn_speed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_category_speed" />

            <ImageButton
                android:id="@+id/btn_temperature"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_category_temperature" />

            <ImageButton
                android:id="@+id/btn_volume"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_category_volume" />

            <ImageButton
                android:id="@+id/btn_currency"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_category_currency" />
        </LinearLayout>


    </com.github.fafaldo.fabtoolbar.widget.FABToolbarLayout>

</android.support.constraint.ConstraintLayout>
