<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn_delete"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="@android:color/background_light"
                android:elevation="0dp"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_delete"
                android:tint="@android:color/background_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_conversion_element"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingBottom="11dp"
            android:paddingTop="12dp"
            android:touchscreenBlocksFocus="false"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/spinner_conversion_left"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_gravity="fill"
                android:layout_marginStart="0dp"
                android:padding="0dp"
                android:background="@android:drawable/btn_default"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toStartOf="@+id/spinner_conversion_right"
                app:layout_constraintStart_toEndOf="@+id/edittext_conversion_left"
                app:layout_constraintTop_toTopOf="@+id/edittext_conversion_left" />

            <Spinner
                android:id="@+id/spinner_conversion_right"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_gravity="fill"
                android:layout_marginEnd="0dp"
                android:padding="0dp"
                android:background="@android:drawable/btn_default"
                android:focusableInTouchMode="true"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toStartOf="@+id/edittext_conversion_right"
                app:layout_constraintStart_toEndOf="@+id/spinner_conversion_left"
                app:layout_constraintTop_toTopOf="@+id/edittext_conversion_right" />

            <EditText
                android:id="@+id/edittext_conversion_left"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:padding="4dp"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:nestedScrollingEnabled="false"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/edittext_conversion_right"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:padding="4dp"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:paddingTop="4dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#2d2d2d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

</android.support.constraint.ConstraintLayout>